--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,5 +41,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Ireland -- Social life and customs -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: Luttrell Of Arran
 url: http://www.gutenberg.org/ebooks/35717
